# agentdata

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  benchmark.py  demo.py  pyproject.toml  requirements.txt
.claude/skills/agentdata/: SKILL.md
.github/workflows/: ci.yml
examples/: agentmem_bench.json  diagnose_to_recipe.json  local_to_sft.yaml  registry.yaml  rules.yaml
src/agentdata/: __init__.py  __main__.py  builder.py  config.py  pipeline.py  report.py  types.py
src/agentdata/diagnose/: __init__.py  evalreport.py  introspect.py  selector.py
src/agentdata/emit/: __init__.py  base.py  chat.py  convert.py  devset.py  dpo.py  easydataset.py  pretrain.py  sft.py
src/agentdata/generate/: __init__.py  gepa.py  preference.py  recombine.py  synth.py
src/agentdata/generate/llm/: __init__.py  anthropic_provider.py  base.py  mock.py
src/agentdata/select/: __init__.py  curriculum.py  dedup.py  score.py
src/agentdata/sources/: __init__.py  base.py  github.py  huggingface.py  kaggle.py  local.py  physionet.py
src/agentdata/unify/: __init__.py  detect.py  normalize.py
tests/: test_live.py  test_registry_schema.py  test_smoke.py  test_train.py
tests/fixtures/: registry_samples.json
train/: README.md  _common.py  dpo_min.py  dpo_trl.py  e2e_real.py  sft_trl.py  tiny_tokenizer.py
train/fixtures/: chat_seed.jsonl
