[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentdata"
version = "0.1.0"
description = "Data-select + generator middleware between raw sources and training pipelines: pluggable sources (HF/Kaggle/PhysioNet/GitHub/local), weakness diagnosis → regime selection, synthetic recombination, and training-ready emitters (SFT/DPO/pretrain/chat/easy-dataset)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["agent", "dataset", "training-data", "sft", "dpo", "grpo", "synthetic-data", "huggingface", "llm", "curriculum"]
authors = [{ name = "chenhao", email = "chenhaomails@gmail.com" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "python-dotenv>=1.0.0",
  "pyyaml>=6.0",          # recipe files (.yaml); JSON recipes need no extra dep
]

[project.optional-dependencies]
# install only the source(s) / features you use
hf = ["datasets>=2.14.0"]                 # huggingface source
kaggle = ["kaggle>=1.6"]                  # kaggle source
physionet = ["wfdb>=4.0", "requests>=2.28"]  # physionet source (DUA-gated)
github = ["requests>=2.28"]               # github raw/clone source
gen = ["anthropic>=0.40", "numpy>=1.24"]  # synthetic generation (teacher LLM)
all = [
  "datasets>=2.14.0",
  "kaggle>=1.6",
  "wfdb>=4.0", "requests>=2.28",
  "anthropic>=0.40", "numpy>=1.24",
]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/chenhaodev/agentdata"
Repository = "https://github.com/chenhaodev/agentdata"
Issues = "https://github.com/chenhaodev/agentdata/issues"

[project.scripts]
agentdata = "agentdata.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# live tests self-skip unless RUN_LIVE=1, so a plain `pytest` run stays offline
addopts = "-q"
